environment周りを整備する

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 SLACK_BOT_TOKEN=""
 SLACK_APP_TOKEN=""
+# リアクションランキングの結果投稿先のチャンネルID.slackのチャンネルからコピーできる.
+SLACK_REACTION_RANKING_CHANNEL_ID="C111ALPHAB3"
