--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ SLACK_APP_TOKEN=""
 SLACK_REACTION_RANKING_CHANNEL_ID="C111ALPHAB3"
 # Socket ModeをやめてWeb APIを使う場合は、以下の設定を行う必要がある。
 SIGNING_SECRET=""
+
+# GCP周りの値
+GCP_PROJECT_ID=""
+GCP_SERVICE_NAME=""
+GCP_JOB_NAME=""
+GCP_REGION=""
+GCP_MEMORY=""
+GCP_CPU=""
+GCP_TIMEOUT=""
+GCP_MAX_RETRIES=""
+GCP_REPOSITORY_NAME=""
